--- a/contacts.html
+++ b/contacts.html
@@ -591,28 +591,28 @@
 				<div class="main_item_cont2">
 					<div class="cont_offset">
 						<h3 class="title2  animated animated_slow transparent" data-animation="fadeInUp"
-							data-animation-delay="300" style="color: #ffffff;">Остались вопросы?</h3>
+							data-animation-delay="300" style="color: #ffffff;">Still have questions?</h3>
 
 						<form action="send.php" id="form_voprosy" class="form footer__form blackout_form">
 							<div class="row cont_offset">
 								<div class="col-md-6 col-xl-3">
 									<div class="form_box">
 										<input type="text" name="userName" class="input footer__input">
-										<span class="placeholder_txt">Имя</span>
+										<span class="placeholder_txt">Name</span>
 									</div>
 								</div>
 
 								<div class="col-md-6 col-xl-3">
 									<div class="form_box">
 										<input type="tel" name="userPhone" class="input footer__input">
-										<span class="placeholder_txt">Телефон</span>
+										<span class="placeholder_txt">Phone</span>
 									</div>
 								</div>
 
 								<div class="col-md-6 col-xl-3">
 									<div class="form_box">
 										<input type="email" name="userEmail" class="input footer__input">
-										<span class="placeholder_txt">Электронная почта</span>
+										<span class="placeholder_txt">E-mail</span>
 									</div>
 								</div>
 
@@ -620,7 +620,7 @@
 									<div class="form_box2">
 										<div class="form_lg2">
 											<button class="btn btn_red2 btn_full" type="submit">
-												<span>отправить</span>
+												<span>Send</span>
 												<i class="btn_icon_arrow"><img
 														src="assets/apps/images/icons/arrow_right.svg" loading="lazy"
 														alt="arrow_right"></i>
@@ -629,9 +629,8 @@
 
 										<div class="form_txt2">
 											<input class="checkbox" id="checkbox-3" type="checkbox" checked="checked">
-											<label for="checkbox-3">Я согласен с условиями обработки <br>
-												<a href="polzovatelskoe-soglashenie.html" target="_blank">персональных
-													данных</a>
+											<label for="checkbox-3">I agree to the terms of processing<br>
+												<a href="polzovatelskoe-soglashenie.html" target="_blank">personal data</a>
 											</label>
 										</div>
 									</div>
@@ -672,7 +671,7 @@
 									<div class="form_box2">
 										<div class="form_lg2">
 											<button class="btn btn_red2 btn_full" type="submit">
-												<span>отправить</span>
+												<span>Send</span>
 												<i class="btn_icon_arrow"><img
 														src="assets/apps/images/icons/arrow_right.svg" loading="lazy"
 														alt="arrow_right"></i>
@@ -708,8 +707,8 @@
 									<div class="footer_txt" itemprop="address" itemscope=""
 										itemtype="http://schema.org/PostalAddress">
 										<p>
-											<span itemprop="addressLocality">г. Нур-Султан</span>
-											<span itemprop="streetAddress">ул. Хлудова 6/1</span>
+											<span itemprop="addressLocality">Nur-Sultan</span>
+											<span itemprop="streetAddress">Khludova 6/1</span>
 										</p>
 									</div>
 								</div>
@@ -774,8 +773,7 @@
 							<div class="row cont_offset">
 								<div class="col-md-6">
 									<div class="footer_txt3 hide_1199">
-										2010-2020 © <span itemprop="name">Интернет-агентство «TDB»</span><br>Все
-										права защищены
+										2010-2021 © <span itemprop="name">Internet agency «TDB»</span><br>All rights reserved
 									</div>
 								</div>
 
@@ -807,8 +805,7 @@
 
 								<div class="col-md-12">
 									<div class="footer_txt3 hide_1200">
-										2010-2020 © <span itemprop="name">Интернет-агентство «TDB»</span><br>Все
-										права защищены
+										2010-2021 © <span itemprop="name">Internet agency «TDB»</span><br>All rights reserved
 									</div>
 								</div>
 							</div>
@@ -820,11 +817,10 @@
 			<div class="footer_bottom">
 				<div class="container">
 					<ul class="footer_nav2">
-						<li><a href="#">Карта сайта</a></li>
-						<li><a href="#">Пользовательское соглашение</a></li>
-						<li><a href="#">Политика защиты и
-								обработки персональных данных</a></li>
-						<li><a href="#">Сводная ведомость</a></li>
+						<li><a href="#">Site map</a></li>
+						<li><a href="#">Terms of use</a></li>
+						<li><a href="#">Personal data protection and processing policy</a></li>
+						<li><a href="#">Consolidated statement</a></li>
 					</ul>
 				</div>
 			</div>
@@ -836,7 +832,7 @@
 	<div class="sl_hidden">
 
 		<div class="sl_modal" id="order">
-			<div class="h likeh2">Заявка на услуги</div>
+			<div class="h likeh2">Service request</div>
 			<form data-goal="formFullSend" id="form_popupzayavka" action="index.html" method="post"
 				class="sl_stdform ajax_form" novalidate>
 				<input type="hidden" name="pagetitle" value="Контакты">
@@ -899,7 +895,7 @@
 						</div>
 						<div class="sl_input sl_submit_input">
 							<button type="submit">
-								<span>Отправить</span>
+								<span>Send</span>
 							</button>
 							<span class="sl_response_text"></span>
 						</div>
