--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>TBD - территория профессионалов, готовых находить нестандартные эффективные решения</title>
+	<title>TBD - is a territory of professionals who are ready to find non-standard effective solutions.</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -549,7 +549,7 @@
 
 									<p class="animated animated_slow transparent" data-animation="fadeInUp"
 										data-animation-delay="900">
-										<a href="service.1.html" class="btn"><span>more</span></a>
+										<a href="service.1.html" class="btn"><span>Read more</span></a>
 									</p>
 								</div>
 
@@ -576,7 +576,7 @@
 
 									<p class="animated animated_slow transparent" data-animation="fadeInUp"
 										data-animation-delay="900">
-										<a href="service.1.html" class="btn"><span>more</span></a>
+										<a href="service.1.html" class="btn"><span>Read more</span></a>
 									</p>
 								</div>
 
@@ -603,7 +603,7 @@
 
 									<p class="animated animated_slow transparent" data-animation="fadeInUp"
 										data-animation-delay="900">
-										<a href="service.1.html" class="btn"><span>more</span></a>
+										<a href="service.1.html" class="btn"><span>Read more</span></a>
 									</p>
 								</div>
 
@@ -648,7 +648,7 @@
 								data-animation-delay="900">Каждый из нас имеет большой практический опыт работы в различных сферах PR-индустрии и маркетинга.</p>
 							<p class="animated animated_slow transparent" data-animation="fadeInUp"
 								data-animation-delay="900">
-								<a href="about/kompani.html" class="btn-link"><span>More</span></a>
+								<a href="about/kompani.html" class="btn-link"><span>Read more</span></a>
 							</p>
 						</div>
 					</div>
