--- a/keysi.html
+++ b/keysi.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Кейсы по репутационному маркетингу - TBD </title>
+	<title>Reputation Marketing Cases - TBD</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
