--- a/service/creative-dev.html
+++ b/service/creative-dev.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Креативные разработки - TDB </title>
+	<title>Creative developments - TDB </title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -362,7 +362,7 @@
 								</a>
 							</div>
 
-							<a href="javascript:;" class="btn_close btn_close_nav">закрыть<img
+							<a href="javascript:;" class="btn_close btn_close_nav">close<img
 									src="assets/apps/images/icons/close2.svg" loading="lazy" alt=""></a>
 
 							<div class="row">
@@ -494,11 +494,10 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Креативные разработки</h1>
-					<p>Мы держим руку на пульсе, постоянно изучаем последние тренды и
-						технологии, чтобы сделать коммуникации наших клиентов еще более
-						оригинальными и эффективными.</p> <a href="javascript:;" data-modal="order"
-						class="stdbut"><span>заказать услугу</span></a>
+					<h1>Creative developments</h1>
+					<p>We keep our finger on the pulse, constantly studying the latest trends and technologies to make our clients' communications even more original and effective.</p>
+					<a href="javascript:;" data-modal="order"
+						class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- 			<div class="scroll_first_block mobile_only">
@@ -513,14 +512,14 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Креативные разработки</b></div>
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Creative developments</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
 								<use xlink:href="#angle_arrow"></use>
 							</svg>
-							<span>Главная</span>
+							<span>Home Page</span>
 						</a>
 					</div>
 				</div>
@@ -559,13 +558,9 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">В нашем арсенале большой выбор
-							решений от создания линии полиграфической продукции до
-							разработки мобильных приложений и световые проекции.</span></p>
-						<p><span>Мы используем самые современные подходы в создании нативной,
-							контекстной и вирусной рекламы.</span></p>
-						<p><span>С нами вы будете тонко чувствовать свою аудиторию и напоминать о
-							себе изящно и со вкусом.</span></p>
+						<p><span class="tm6">We have a wide range of solutions in our arsenal, from the creation of a line of printing products to the development of mobile applications and light projections.</span></p>
+						<p><span>We use the most modern approaches in creating native, contextual and viral advertising.</span></p>
+						<p><span>With us, you will subtly feel your audience and remind yourself gracefully and tastefully.</span></p>
 					</div>
 					<div class="big_red_order_button mobile_only">
 						<a href="javascript:;" data-modal="order">
