--- a/service/digital-smm.html
+++ b/service/digital-smm.html
@@ -494,13 +494,9 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Digital и SMM</h1>
-					<p>Одним из частых вопросов, с которым к нам обращаются клиенты –
-						это в какой социальной сети открыть аккаунт? В ответ мы задаем
-						несколько встречных вопросов и финалом нашего диалога становится
-						хороший бриф, в котором прописаны все детали, вплоть до стиля
-						фона страницы.</p> <a href="javascript:;" data-modal="order" class="stdbut"><span>заказать
-							услугу</span></a>
+					<h1>Digital and SMM</h1>
+					<p>One of the most frequently asked questions of our clients to us - what social network to use? In response, we ask a few common questions and finalise of our dialogue will be a good brief, where all the details are written, including the background style of the page.</p>
+					<a href="javascript:;" data-modal="order" class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- 			<div class="scroll_first_block mobile_only">
@@ -515,14 +511,14 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Digital и SMM</b></div>
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Digital and SMM</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
 								<use xlink:href="#angle_arrow"></use>
 							</svg>
-							<span>Главная</span>
+							<span>Home Page</span>
 						</a>
 					</div>
 				</div>
@@ -561,18 +557,8 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">Зачем мы это делаем? Мы просто четко знаем, что в
-								PR не может быть мелочей, особенно не стоит экспериментировать с
-								Social media.Если вы лидер в медицине, например, то
-								профессиональный подход должен присутствовать во всем и ваш
-								аккаунт с момента его регистрации становится лицом бренда вашей
-								компании.</span></p>
-						<p><span>Но с нами вам не о чем беспокоиться, мы очень детально
-								прорабатываем политику присутствия в социальных сетях как для
-								компании, так и для топ-менеджеров и политиков. С нами ваш аккаунт
-								станет настоящей экспертной площадкой с незаурядными текстами и
-								качественной визуализацией. Мы обеспечим двустороннюю
-								коммуникацию с вашей аудиторией в режиме реального времени.</span></p>
+						<p><span class="tm6">Why do we do this? We just know very well that PR can't be petty, especially experimenting with social media. For instance, if you are a leader in medical field, professional approach should be present everywhere; your account from the moment of its registration will become a brand of your company.</span></p>
+						<p><span>With us, you have nothing to worry!  We work very carefully on the policy of presence in social networks as for the company, as well as for top managers and politicians. Your account will become a real expert platform with non-standard texts and quality visualization. We provide two-way communication with your audience in real time.</span></p>
 					</div>
 					<div class="big_red_order_button mobile_only">
 						<a href="javascript:;" data-modal="order">
