--- a/service/gr.html
+++ b/service/gr.html
@@ -495,10 +495,9 @@
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
 					<h1>Government relations</h1>
-					<p>Мы помогаем выстраивать эффективные коммуникации с компанией-
-						заказчиком и государственными органами как республиканского, так и
-						местного уровня.</p> <a href="javascript:;" data-modal="order"
-						class="stdbut"><span>заказать услугу</span></a>
+					<p>We help to build effective communications with the customer company and government agencies at both on the republican and local levels.</p>
+					<a href="javascript:;" data-modal="order"
+						class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- 			<div class="scroll_first_block mobile_only">
@@ -513,14 +512,14 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
 							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Government relations</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
 								<use xlink:href="#angle_arrow"></use>
 							</svg>
-							<span>Главная</span>
+							<span>Home Page</span>
 						</a>
 					</div>
 				</div>
@@ -559,13 +558,7 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">Наши менеджеры, а также привлеченные
-							консультанты имеют большой практический опыт работы на
-							государственной службе, в национальных и зарубежных компаниях.
-							Мы работаем, основываясь на высоких принципах этичности, которые
-							пописаны в нашей корпоративной политики. Применяемые нами
-							социально-коммуникационные и GR-технологии абсолютно
-							гармонируют с законодательством.</span></p>
+						<p><span class="tm6">Our managers, as well as hired consultants, have extensive practical experience in the civil service, in national and foreign companies. We work based on high principles of ethics, which are written in our corporate policy. The social, communication and GR technologies we use are in absolute harmony with the legislation.</span></p>
 					</div>
 					<div class="big_red_order_button mobile_only">
 						<a href="javascript:;" data-modal="order">
