--- a/service/komun-company.html
+++ b/service/komun-company.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Коммуникационные кампании - TDB </title>
+	<title>Communication campaigns - TDB </title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -497,10 +497,9 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Коммуникационные кампании</h1>
-					<p>Коммуникационные кампании – это одно из самых интересных
-						направлений нашей деятельности.</p> <a href="javascript:;" data-modal="order"
-						class="stdbut"><span>заказать услугу</span></a>
+					<h1>Communication campaigns</h1>
+					<p>Communication campaigns are one of the most interesting areas of our activity.</p> <a href="javascript:;" data-modal="order"
+						class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- 			<div class="scroll_first_block mobile_only">
@@ -515,14 +514,14 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Коммуникационные кампании</b></div>
+					<div class="desktop_only"><a href="../index.html">Home Paage</a> &nbsp; | &nbsp; <a
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Communication campaigns</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
 								<use xlink:href="#angle_arrow"></use>
 							</svg>
-							<span>Главная</span>
+							<span>Home Page</span>
 						</a>
 					</div>
 				</div>
@@ -561,20 +560,12 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">Наш опыт и знание не только
-								сферы медиа и PR, а также подкованность практически во всех
-								отраслях позволяет нам очень быстро и качественно организовать
-								коммуникационную кампанию как для коммерческих организаций, так
-								и для государственных органов. Наши медиа-аналитики, эксперты и
-								менеджеры могут разработать антикризисные меры в кратчайшие
-								сроки и вывести бренд заказчика из любой ситуации без потерь. У нас
-								наработаны долгосрочные связи с топ-менеджерами СМИ, лидерами
-								общественного мнения, отраслевыми экспертами, журналистами.</span></p>
+						<p><span class="tm6">Our experience and knowledge allow us to organize a communication campaign very quick and qualitative for commercial organizations, as well as for government agencies. Our media analysts, experts and managers can develop anti-crisis measures in the shortest possible time and bring out the customer brand from any situation without loss. We have developed long-term contacts with top managers of the media, leaders of public opinion, industry experts and journalists.</span></p>
 						<ul>
-							<li>Корпоративные коммуникации</li>
-							<li>Антикризисные коммуникации</li>
-							<li>Продвижение бренда компании</li>
-							<li>Личный бренд руководителя</li>
+							<li>Corporate communications</li>
+							<li>Anti-crisis communications</li>
+							<li>Company brand promotion</li>
+							<li>Personal brand of the company leader</li>
 						</ul>
 					</div>
 					<div class="big_red_order_button mobile_only">
