--- a/service/om.html
+++ b/service/om.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Организация мероприятий - TDB </title>
+	<title>Event Organization - TDB </title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -494,11 +494,10 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Организация мероприятий</h1>
-					<p>Деловые мероприятия – это то, с чего мы начинали. Наше мастерство
-						и профессиональный подход вызвал доверие со стороны клиентов,
-						они стали сами предлагать нам организовать для них PR-кампании.</p> <a href="javascript:;"
-						data-modal="order" class="stdbut"><span>заказать услугу</span></a>
+					<h1>Event Organization</h1>
+					<p>Business events are where we started. Our skill and professional approach inspired the trust of our clients, they themselves began to offer us to organize PR campaigns for them.</p>
+					<a href="javascript:;"
+						data-modal="order" class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- 			<div class="scroll_first_block mobile_only">
@@ -513,14 +512,14 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Организация мероприятий</b></div>
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Event Organization</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
 								<use xlink:href="#angle_arrow"></use>
 							</svg>
-							<span>Главная</span>
+							<span>Home Page</span>
 						</a>
 					</div>
 				</div>
@@ -559,32 +558,18 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">Спрос рождает предложение и мы расширили спектр своих услуг, в
-								числе которых осталось Event направление. Различные конференции,
-								meet-up события, презентации, B2B, G2C и другие мероприятия
-								сегодня зарекомендовали себя как хороший инструмент PR и GR
-								продвижения. Участие в меропритиях открывает широкий спектр
+						<p><span class="tm6">Demand creates supply and we have expanded the range of our services toward the Event direction. Various conferences, meet-up events, presentations, B2B, G2C and other events have today established themselves as a good tool for PR and GR promotion. Participation in events opens up a wide range of opportunities for building communications and increasing sales.
 								<br><br>
-								возможностей для выстраивания коммуникаций и увеличения продаж.
-								Мы организуем мероприятия под ключ – от разработки концепции
-								события до демонтажа оборудования.</span></p>
-						<p><b>Мы готовы организовать для вас:</b></p>
+								We organize turnkey events - from the development of the concept of the event to the dismantling of equipment.</span></p>
+						<p><b>We are ready to organize for you:</b></p>
 						<ul>
-							<li>Онлайн-мероприятия на любой платформе и любого формата
-								(закрытые, публичные, семинары, конференции, выставки, конкурсы и
-								т.д.)</li>
-							<li>мероприятия массового характера: выставки, презентации, шоу-
-								показы</li>
-							<li>мероприятия для потенциальных клиентов: семинары, круглые
-								столы, конференции, B2B встречи</li>
-							<li>мероприятия массово – спортивного направления: турниры,
-								соревнования, матчи и пр</li>
-							<li>мероприятия для прессы: пресс-конференции, брифинги, пресс-туры</li>
-							<li>медиа-сопровождение участия клиента в мероприятии: анонсы,
-								интервью, пост-релизы, SMM и пр</li>
-							<li>консалтинг по подготовке к мероприятию: разработка программы,
-								оформление стендов, подбор имиджевой продукции, временного
-								персонала и пр</li>
+							<li>Online events on any platform and any format (closed, public, seminars, conferences, exhibitions, competitions, etc.)</li>
+							<li>Massive events: exhibitions, presentations, shows</li>
+							<li>Events for potential clients: seminars, round tables, conferences, B2B meetings</li>
+							<li>Massive sport events: tournaments, competitions, matches, etc.</li>
+							<li>Press events: press conferences, briefings, press tours</li>
+							<li>Media support of the client's participation in the event: announcements, interviews, post-releases, SMM, etc.</li>
+							<li>Consulting on preparation for the event: program development, stands design, selection of image products, temporary personnel, etc.</li>
 						</ul>
 					</div>
 					<div class="big_red_order_button mobile_only">
