--- a/service/on-m.html
+++ b/service/on-m.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Организация онлайн-мероприятий - TDB </title>
+	<title>Online event organization - TDB </title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -494,12 +494,9 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Организация онлайн-мероприятий</h1>
-					<p>Пандемия внесла большие коррективы в планы многих компаний,
-						наиболее уязвимой оказалась сфера организации оффлайн-
-						мероприятий. Но мы не отчаялись и разработали пакеты услуг по
-						организации онлайн-событий.</p> <a href="javascript:;" data-modal="order"
-						class="stdbut"><span>заказать услугу</span></a>
+					<h1>Online event organization</h1>
+					<p>The pandemic has made big adjustments to the plans of many companies, the most vulnerable was the sphere of organizing offline events. But we did not despair and developed packages of services for organizing online events.</p> <a href="javascript:;" data-modal="order"
+						class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- 			<div class="scroll_first_block mobile_only">
@@ -514,8 +511,8 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Организация онлайн-мероприятий</b>
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Online event organization</b>
 					</div>
 					<div class="mobile_only">
 						<a href="../index.html">
@@ -561,19 +558,9 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">В нашей команде есть как проектные
-								менеджеры, продюсеры, так и IT-специалисты, многие годы
-								работающие в Event-компаниях. Мы оказываем услуги организации
-								онлайн-мероприятий «под ключ», что подразумевает разработку идеи
-								события, программы, подбор платформы, приглашение участников,
-								PR-сопровождение и многое другое. Также часто мы выступаем
-								консультантами в организации мероприятия. Каждый случай
-								индивидуален и для любого клиента мы готовы подобрать
-								оптимальный пакет услуг.</span></p>
-						<p><a href=https://www.instagram.com/tv/CCnGwAFH-2R/?igshid=1a0cc1k8khzl6">Смотреть
-								инстаграм</a></p>
-						<p><a href="https://www.instagram.com/tv/CCpzulPHsrK/?igshid=149mu2ag2xa1s">Смотреть
-								инстаграм</a></p>
+						<p><span class="tm6">Our team includes both project managers, producers and IT specialists who have been working in Event companies for many years. We provide services for organizing online events on a turnkey basis, which means developing an idea for an event, a program, selecting a platform, inviting participants, PR support and much more. We also often act as consultants in organizing an event. Each case is individual and for any client we are ready to choose the optimal package of services.</span></p>
+						<p><a href=https://www.instagram.com/tv/CCnGwAFH-2R/?igshid=1a0cc1k8khzl6">Watch Instagram</a></p>
+						<p><a href="https://www.instagram.com/tv/CCpzulPHsrK/?igshid=149mu2ag2xa1s">Watch Instagram</a></p>
 					</div>
 					<div class="big_red_order_button mobile_only">
 						<a href="javascript:;" data-modal="order">
