--- a/service/trening.html
+++ b/service/trening.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Тренинги - TDB </title>
+	<title>Training - TDB </title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -494,11 +494,9 @@
 			</div>
 			<div class="wrapper">
 				<div class="inner_first_block__title u-margin-top-85">
-					<h1>Тренинги</h1>
-					<p>Команда TBD накопила большой практический опыт в выстраивании
-						коммуникаций разного уровня, этими навыками и знаниями мы готовы
-						делиться с нашими слушателями.</p> <a href="javascript:;" data-modal="order"
-						class="stdbut"><span>заказать услугу</span></a>
+					<h1>Training</h1>
+					<p>The TBD team has accumulated extensive practical experience in building communications of various levels, we are ready to share these skills and knowledge with our listeners.</p> <a href="javascript:;" data-modal="order"
+						class="stdbut"><span>order service</span></a>
 				</div>
 			</div>
 			<!-- <div class="scroll_first_block mobile_only">
@@ -513,14 +511,14 @@
 		<section class="inner_nav_block ">
 			<div class="wrapper">
 				<div class="breadcrumbs">
-					<div class="desktop_only"><a href="../index.html">Главная</a> &nbsp; | &nbsp; <a
-							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Тренинги</b></div>
+					<div class="desktop_only"><a href="../index.html">Home Page</a> &nbsp; | &nbsp; <a
+							href="../service.1.html">Services</a> &nbsp; | &nbsp; <b>Training</b></div>
 					<div class="mobile_only">
 						<a href="../index.html">
 							<svg>
 								<use xlink:href="#angle_arrow"></use>
 							</svg>
-							<span>Главная</span>
+							<span>Home Page</span>
 						</a>
 					</div>
 				</div>
@@ -559,16 +557,13 @@
 			<div class="text_page__block">
 				<div class="wrapper">
 					<div class="margin_for_inner_nav uslugi__reputation__margin_for_inner_nav01">
-						<p><span class="tm6">Никакой воды и занудной теории,
-								только практика на реальных кейсах. Это настоящая прокачка
-								навыков. После наших тренингов вы уже на будете прежними, вы
-								станете намного круче!</span></p>
-						<p><span class="tm6">Чему вы у нас научитесь?</span></p>
+						<p><span class="tm6">No water and boring theory, just practice on real cases. This is a real skill upgrade. After our trainings, you will not be the same, you will become much cooler!</span></p>
+						<p><span class="tm6">What will you learn from us?</span></p>
 						<ul>
-							<li>Эффективные Digital-коммуникации</li>
-							<li>Нескучный текст. Как продать новость?</li>
-							<li>Личный бренд</li>
-							<li>Networking for business или «Связи решают все»</li>
+							<li>Effective Digital Communications</li>
+							<li>Boring text. How to sell a news item?</li>
+							<li>Personal brand</li>
+							<li>Networking for business or «Connections solve everything»</li>
 						</ul>
 					</div>
 					<div class="big_red_order_button mobile_only">
