--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Контакты TDB: адрес компании, телефоны </title>
+	<title>TDB contacts: company address, phone numbers</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
