--- a/service.1.html
+++ b/service.1.html
@@ -5,7 +5,7 @@
 	<base href="">
 	<meta charset="UTF-8">
 
-	<title>Услуги компании TBD.KZ - территория профессионалов, готовых находить нестандартные эффективные решения
+	<title>TBD Services - is a territory of professionals who are ready to find non-standard effective solutions.
 	</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
